Revert "Once-over the repository"
This reverts commit 89334ba8d107ce92c101ad11b0de2586d434e7c5.